# interface_omie_api

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
omie_interface/: config.py
omie_interface/middleware/: auth.py  check_paramters.py
omie_interface/routes/: get_bank_accounts.py  get_payment_categories.py  post_collection.py
omie_interface/services/: GetBankAccountsServices.py  GetPaymentCategoriesServices.py  PostCollectionServices.py  RequestOmie.py
